# python-basics-tutorial-de

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/: 404.rst  apps.rst  changelog.rst  conf.py  constraints.txt  contribute.rst  dataclasses.rst  editors.rst  explore.rst  functions.rst  index.rst  input.rst  install.rst  intro.rst  requirements.txt  structure.rst  style.rst  variables-expressions.rst
docs/appendix/: checks.rst  encodings.rst  glossary.rst  index.rst  regex.rst
docs/control-flow/: boolean.rst  conditional.rst  exceptions.rst  index.rst  loops.rst  with.rst  with_alt.py
docs/control-flows/: boolean.rst  exceptions.py  exceptions.rst  functions.rst  if-elif-else.rst  index.rst  loops.rst  with.py  with.rst
docs/document/: arithmetic.py  badges.rst  code-blocks.rst  directives.rst  docstrings-example.rst  docstrings.rst  doctest.rst  extensions.rst  index.rst  intersphinx.rst  placeholder.rst  rest.rst  shot-scraper.rst  start.rst  test.rst  ui-elements.rst
docs/document/sphinx/: autodoc-examples.rst  code-blocks.rst  convert.rst  directives.rst  docstrings.rst  extensions.rst  index.rst  intersphinx.rst  placeholder.rst  rest.rst  start.rst  test.rst  ui-elements.rst
docs/functions/: decorators.rst  index.rst  lambda.rst  params.rst  variables.rst
docs/libs/: batteries.rst  binary-extensions.rst  cibuildwheel.rst  distribution.rst  gitlab.rst  glossary.rst  index.rst  install.rst  packages-programmes.rst  packages.rst  upload-install.rst
docs/logging/: examples.ipynb  index.rst
docs/modules/: index.rst  wcargparse.py  wcargv.py
docs/modules-packages/: index.rst
docs/oop/: classes.rst  coherent.rst  dataclasses.rst  index.rst  inheritance.rst  methods.rst  namespaces.rst  private.rst  property.rst  summary.rst  types.rst  variables.rst
docs/packs/: apps.rst  binary-extensions.rst  cibuildwheel.rst  distribution.rst  gitlab.rst  index.rst  publish.rst  upload-install.rst
docs/save-data/: create-data.rst  create-db.rst  delete-data.rst  files-directories.rst  files.rst  filesystem.rst  index.rst  modules.rst  normalise.py  normalise.rst  pickle.rst  psycopg.rst  query-data.rst  query-normalised.rst  query_data.py  query_normalised.py  sqlite.rst  test_sqlite.py  update-data.rst  xml.rst
docs/test/: bdd.rst  coverage.rst  doctest.rst  glossary.rst  hypothesis.rst  index.rst  mock.rst  pytest.rst  sqlite.rst  tdd.rst  test_pytest.py  tox.rst  unittest.rst  unittest2.rst
docs/types/: dicts.rst  files.rst  index.rst  lists.rst  none.rst  numbers.rst  sets.rst  strings.rst  tuples.rst
(+72 files in other folders)
