[project]
name = "python-basics-tutorial-de"
version = "24.2.0"
description = "Schulungsmaterialen für unseren Python-Basis-Kurs: https://cusy.io/de/seminare"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

urls."Bug Tracker" = "https://github.com/veit/python-basics-tutorial-de/issues"
urls."Homepage" = "https://github.com/veit/python-basics-tutorial-de/"

[dependency-groups]
dev = [
  "codespell",
  "pre-commit",
  "vale",
  { include-group = "docs" },
]
docs = [
  "furo",
  "ipython",
  "ipywidgets",
  "matplotlib",                     # matplotlib is required for social cards
  "nbsphinx",
  "pygments-pytest",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-lint",
  "sphinx-notfound-page",
  "sphinx-sitemap",
  "sphinxcontrib-plantuml",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxext-opengraph",
]

[tool.codespell]
skip = "*.ipynb, *.rst, *.svg"
